<resources>
    <string name="app_name">ToWatchList</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="space_separated" translatable="false">%1$s %2$s</string>
    <string name="comma_separated" translatable="false">%1$s, %2$s</string>
    <string name="enter_separated" translatable="false">%1$s\n%2$s</string>

    <string name="watchlist">Watchlist</string>
    <string name="search">Search</string>
    <string name="added_to_watchList">Added to WatchList!</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="nothing_found">Nothing found</string>
    <string name="search_string_is_empty">Search string is empty</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="original_language">Original language</string>
    <string name="added_at">Added at</string>
    <string name="added_on">Added:</string>
    <string name="viewed">Viewed</string>
    <string name="mark_as_viewed">Mark as viewed</string>
    <string name="movie_overview">Movie overview</string>
    <string name="check_on_imdb">Check on IMDb</string>
    <string name="vote_count_with_number">Vote count: %1$d</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="views_for_all_time">Views for all time</string>
    <string name="views_for_month">For month</string>
    <string name="views_for_week">For week</string>
    <string name="probably_no_internet_connection">Something went wrong\nProbably you have problems with internet connection</string>
    <string name="overview">Overview</string>
    <string name="seasons_count">Seasons count:</string>
    <string name="episode_runtime">Episode runtime: %1$s</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="last_week">last week</string>
    <string name="last_month">last month</string>
    <string name="last_year">last year</string>
    <string name="this_week">this week</string>
    <string name="this_month">this month</string>
    <string name="this_year">this year</string>
    <string name="long_ago">long ago</string>
    <string name="your_watchlist_is_empty">Your Watchlist is empty</string>
    <string name="no_search_text">Use the search to find movies and TV series</string>
    <string name="date_time_error">Error. Probably there is any problem with your devices date an time</string>

    <string-array name="at_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="rating">Rating</string>
</resources>