<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_card"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Harry Potter and Chamber of Secrets" />

        <androidx.cardview.widget.CardView
            android:id="@+id/poster_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_card"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:columnCount="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_card">

            <LinearLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="fill_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/budget"/>

                <TextView
                    android:id="@+id/param_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="Something" />
            </LinearLayout>

            <LinearLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="fill_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/revenue"/>

                <TextView
                    android:id="@+id/param_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="Something" />
            </LinearLayout>

            <LinearLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="fill_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/original_language"/>

                <TextView
                    android:id="@+id/param_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="Something" />
            </LinearLayout>

            <LinearLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="fill_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/added_at"/>

                <TextView
                    android:id="@+id/param_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="Something" />
            </LinearLayout>

        </GridLayout>

        <Button
            android:id="@+id/watch_state_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/mark_as_watched"
            app:icon="@drawable/ic_check_24"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:layout_constraintStart_toEndOf="@+id/poster_card"
            app:layout_constraintTop_toBottomOf="@+id/release_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>