<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/watchlistLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.watchlist.WatchListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_scrollFlags="scroll|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/background_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cosmos"/>

                <LinearLayout
                    android:id="@+id/views_for_all_time_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/views_for_week_layout"
                    app:layout_constraintStart_toEndOf="@+id/views_for_month_layout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3">

                    <TextView
                        android:id="@+id/views_for_all_time"
                        style="@style/InfoOverlayText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="46sp"
                        tools:text="46" />

                    <TextView
                        android:id="@+id/for_all_time_tv"
                        style="@style/InfoOverlayText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/views_for_all_time" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/views_for_month_layout"
                    style="@style/InfoOverlayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.7">

                    <TextView
                        android:id="@+id/views_for_month"
                        style="@style/InfoOverlayText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="26sp"
                        android:layout_gravity="center"
                        tools:text="15" />

                    <TextView
                        android:id="@+id/for_month_tv"
                        style="@style/InfoOverlayText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/views_for_month" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/views_for_week_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"

                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.7">

                    <TextView
                        android:id="@+id/views_for_week"
                        style="@style/InfoOverlayText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="26sp"
                        tools:text="3" />

                    <TextView
                        android:id="@+id/for_week_tv"
                        style="@style/InfoOverlayText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/views_for_week" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/watchList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/li_movie_watchlist"/>

    <FrameLayout
        android:id="@+id/empty_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/your_watchlist_is_empty"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>